# libppm

./: Cargo.toml  README.md  img_test.ppm  test.ppm  test.txt
benches/: my_benchmark.rs
ppm/: Cargo.toml  main.py
ppm/src/: demo.rs  image.rs  lib.rs  pixel.rs
src/: image_struct.rs  lib.rs  main.rs
