[package]
name = "projectRust"
version = "0.1.0"
authors = ["zakaria FAHRAOUI<zakaria.fahraoui@gmail.com>",
            "Amina Saidi <saidiiaminahh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false